--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
 header {
-  background-color: #ffb6c1;
+  background-image: url("Unknown.jpeg)";
 }
 body {
   text-align: center;
+  font-family: 'Londrina Shadow', cursive;
 }
 h1 {
   padding-top: 40px;
