--- a/style.css
+++ b/style.css
@@ -13,25 +13,9 @@ h3 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
 li {
-    float: left;
+    display: inline;
 }
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li a:hover {
-    background-color: #111;
+ul {
+    background-color: pink;
 }
