--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 
 header {
-  background-image: url("Unknown.jpeg)";
+  background-image: url("pic1.jpg");
+  background-size: cover;
 }
 body {
   text-align: center;
   font-family: 'Londrina Shadow', cursive;
 }
 h1 {
-  padding-top: 40px;
+  padding-top: 60px;
 }
 h3 {
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
 }
 ul {
     list-style-type: none;
