--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ h3 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 li {
     display: inline;
 }
