--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ ul {
 }
 
 li {
-    display: inline;
+    float: left;
 }
 
 li a {
@@ -34,10 +34,6 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-
-li a {
-    display: block;
-    width: 60px;
 }
 
 /* Change the link color to #111 (black) on hover */
