--- a/style.css
+++ b/style.css
@@ -40,3 +40,11 @@ li a {
 li a:hover {
     background-color: #111;
 }
+.active {
+    background-color: #4CAF50;
+}
+ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
