--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 header {
-  background-image: url("pic1.jpg");
+  background-image: url("picture.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
