--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ body {
   color: red;
 }
 h1 {
+color: white;
   padding-top: 60px;
 }
 h3 {
+color: white;
   padding-top: 20px;
   padding-bottom: 60px;
 }
