--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+    background-color: red;
 }
 .active {
     background-color: #4CAF50;
