--- a/style.css
+++ b/style.css
@@ -57,5 +57,5 @@ a{color: red;
 }
 blockquote{border-width: thick;
   border-style: solid;
-  border-spacing: inherit;
+  border-spacing: 10pt;
   border-color:#ADD8E6;}
